Fixed invalid reference to maven plugin in compiler module.

--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -24,7 +24,7 @@
         <plugins>
             <plugin>
                 <groupId>se.pagero</groupId>
-                <artifactId>schematron-compiler</artifactId>
+                <artifactId>schematron-maven-plugin</artifactId>
                 <version>1.0</version>
                 <configuration>
                     <schematronFiles>
