Refactored name of validator packages.

--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>se.pagero.schematron.Main</mainClass>
+                            <mainClass>org.schematron.Main</mainClass>
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
