--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,26 @@
 	<artifactId>schematron</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-	    
+
+    <scm>
+        <connection>scm:git:ssh://github.com/bardl/schematron.git</connection>
+        <developerConnection>scm:git:git@github.com:bardl/schematron.git</developerConnection>
+        <url>git@github.com:bardl/schematron.git</url>
+    </scm>
+
+    <distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>pagero-releases</id>
+      <url>http://vpogit:8080/nexus/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>pagero-snapshots</id>
+      <url>http://vpogit:8080/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+    
 	<modules>
         <module>validator</module>
 		<module>maven-plugin</module>
