--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>se.pagero</groupId>
     <artifactId>schematron</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <scm>
         <connection>scm:git:ssh://github.com/bardl/Schematron.git</connection>
