--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
-		<groupId>se.pagero</groupId>
+		<groupId>org.schematron</groupId>
 		<artifactId>schematron</artifactId>
 		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>	
 	<name>Schematron Maven Plugin</name>
-	<groupId>se.pagero</groupId>
+	<groupId>org.schematron</groupId>
 	<artifactId>schematron-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.1-SNAPSHOT</version>
 	    
 	<dependencies>
         <dependency>
-            <groupId>se.pagero</groupId>
+            <groupId>org.schematron</groupId>
             <artifactId>schematron-validator</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
