--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>Schematron</name>
-    <groupId>se.pagero</groupId>
+    <groupId>org.schematron</groupId>
     <artifactId>schematron</artifactId>
     <packaging>pom</packaging>
     <version>1.1-SNAPSHOT</version>
