--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
         <repository>
             <uniqueVersion>false</uniqueVersion>
             <id>pagero-releases</id>
-            <url>http://vpogit:8080/nexus/content/repositories/releases/</url>
+            <url>http://pogit:8080/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
             <uniqueVersion>false</uniqueVersion>
             <id>pagero-snapshots</id>
-            <url>http://vpogit:8080/nexus/content/repositories/snapshots/</url>
+            <url>http://pogit:8080/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
