--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -3,20 +3,20 @@
 	<parent>
 		<groupId>org.schematron</groupId>
 		<artifactId>schematron</artifactId>
-		<version>1.6.3</version>
+		<version>1.6.4-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>	
 	<name>Schematron Maven Plugin</name>
 	<groupId>org.schematron</groupId>
 	<artifactId>schematron-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.3</version>
+    <version>1.6.4-SNAPSHOT</version>
 	    
 	<dependencies>
         <dependency>
             <groupId>org.schematron</groupId>
             <artifactId>schematron-validator</artifactId>
-            <version>1.6.3</version>
+            <version>1.6.4-SNAPSHOT</version>
         </dependency>
 
         <dependency>
