--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,14 @@
     <groupId>org.schematron</groupId>
     <artifactId>schematron</artifactId>
     <packaging>pom</packaging>
-    <version>1.6.4-SNAPSHOT</version>
+    <version>1.6.4</version>
 
     <scm>
         <connection>scm:git:ssh://github.com/bardl/Schematron.git</connection>
         <developerConnection>scm:git:git@github.com:bardl/Schematron.git</developerConnection>
         <url>git@github.com:bardl/Schematron.git</url>
-    </scm>   
+      <tag>schematron-1.6.4</tag>
+  </scm>   
 
     <distributionManagement>
         <repository>
