--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <groupId>org.schematron</groupId>
     <artifactId>schematron</artifactId>
     <packaging>pom</packaging>
-    <version>1.6.6</version>
+    <version>1.6.7-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:ssh://github.com/bardl/Schematron.git</connection>
         <developerConnection>scm:git:git@github.com:bardl/Schematron.git</developerConnection>
         <url>git@github.com:bardl/Schematron.git</url>
-      <tag>schematron-1.6.6</tag>
+      <tag>HEAD</tag>
   </scm>   
 
     <distributionManagement>
