--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>maven-plugin-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <!--<dependency>-->
             <!--<groupId>org.apache.maven</groupId>-->
