--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -3,19 +3,19 @@
 	<parent>
 		<groupId>org.schematron</groupId>
 		<artifactId>schematron</artifactId>
-		<version>1.6.16-SNAPSHOT</version>
+		<version>1.6.17-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>	
 	<name>Schematron Compiler</name>
 	<artifactId>schematron-compiler</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.16-SNAPSHOT</version>
+    <version>1.6.17-SNAPSHOT</version>
 	    
 	<dependencies>
         <dependency>
 			<groupId>org.schematron</groupId>
 			<artifactId>schematron-validator</artifactId>
-			<version>1.6.16-SNAPSHOT</version>
+			<version>1.6.17-SNAPSHOT</version>
         </dependency>
 
 		<dependency>
@@ -24,8 +24,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>net.sourceforge.saxon</groupId>
-			<artifactId>saxon</artifactId>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>Saxon-HE</artifactId>
 		</dependency>
 
 		<dependency>
