--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -3,21 +3,20 @@
 	<parent>
 		<groupId>org.schematron</groupId>
 		<artifactId>schematron</artifactId>
-		<version>1.6.16-SNAPSHOT</version>
+		<version>1.6.17-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>	
 	<name>Schematron Maven Plugin</name>
-	<groupId>org.schematron</groupId>
 	<artifactId>schematron-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.16-SNAPSHOT</version>
+    <version>1.6.17-SNAPSHOT</version>
 	    
 	<dependencies>
 
         <dependency>
             <groupId>org.schematron</groupId>
             <artifactId>schematron-compiler</artifactId>
-            <version>1.6.16-SNAPSHOT</version>
+            <version>1.6.17-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -32,8 +31,8 @@
         </dependency>
 
         <dependency>
-            <groupId>net.sourceforge.saxon</groupId>
-            <artifactId>saxon</artifactId>
+            <groupId>net.sf.saxon</groupId>
+            <artifactId>Saxon-HE</artifactId>
         </dependency>
 
         <dependency>
@@ -46,20 +45,6 @@
             <artifactId>maven-plugin-annotations</artifactId>
             <scope>provided</scope>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.apache.maven</groupId>-->
-            <!--<artifactId>maven-artifact</artifactId>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>org.apache.maven.reporting</groupId>-->
-            <!--<artifactId>maven-reporting-api</artifactId>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.maven.reporting</groupId>-->
-            <!--<artifactId>maven-reporting-impl</artifactId>-->
-        <!--</dependency>-->
 
     </dependencies>
     
