--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.schematron</groupId>
     <artifactId>schematron</artifactId>
     <packaging>pom</packaging>
-    <version>1.6.16-SNAPSHOT</version>
+    <version>1.6.17-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:ssh://github.com/bardl/Schematron.git</connection>
@@ -53,9 +53,9 @@
             </dependency>
 
             <dependency>
-                <groupId>net.sourceforge.saxon</groupId>
-                <artifactId>saxon</artifactId>
-                <version>9.1.0.8</version>
+                <groupId>net.sf.saxon</groupId>
+                <artifactId>Saxon-HE</artifactId>
+                <version>9.8.0-14</version>
             </dependency>
 
             <dependency>
