--- a/validator/pom.xml
+++ b/validator/pom.xml
@@ -3,14 +3,14 @@
 	<parent>
 		<groupId>org.schematron</groupId>
 		<artifactId>schematron</artifactId>
-		<version>1.6.16-SNAPSHOT</version>
+		<version>1.6.17-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>	
 	<name>Schematron Validator</name>
 	<groupId>org.schematron</groupId>
 	<artifactId>schematron-validator</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.16-SNAPSHOT</version>
+    <version>1.6.17-SNAPSHOT</version>
 	    
 	<dependencies>
 
@@ -24,11 +24,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
-        
-        <dependency>
-            <groupId>net.sourceforge.saxon</groupId>
-            <artifactId>saxon</artifactId>
-        </dependency>
+
+    <dependency>
+        <groupId>net.sf.saxon</groupId>
+        <artifactId>Saxon-HE</artifactId>
+    </dependency>
 
     </dependencies>
     
