--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -3,19 +3,19 @@
 	<parent>
 		<groupId>org.schematron</groupId>
 		<artifactId>schematron</artifactId>
-		<version>1.6.22</version>
+		<version>1.6.23-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>	
 	<name>Schematron Compiler</name>
 	<artifactId>schematron-compiler</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.22</version>
+    <version>1.6.23-SNAPSHOT</version>
 	    
 	<dependencies>
         <dependency>
 			<groupId>org.schematron</groupId>
 			<artifactId>schematron-validator</artifactId>
-			<version>1.6.22</version>
+			<version>1.6.23-SNAPSHOT</version>
         </dependency>
 
 		<dependency>
