--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -46,6 +46,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-plugin-plugin</artifactId>
+        </dependency>
+
     </dependencies>
     
 </project>
