--- a/validator/pom.xml
+++ b/validator/pom.xml
@@ -13,6 +13,15 @@
     <version>1.6.23-SNAPSHOT</version>
 	    
 	<dependencies>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
